--- a/css/bootstrap-4.3.1.css
+++ b/css/bootstrap-4.3.1.css
@@ -2421,14 +2421,14 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #d67804;
+  border-color: #d67804;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #0069d9;
-  border-color: #0062cc;
+  background-color: #bf8300;
+  border-color: #bf8300;
 }
 
 .btn-primary:focus, .btn-primary.focus {
