--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ html[data-theme="light"]{
     border: 1px solid var(--secondgrey);
     border-radius: 16px;
     color: var(--grey);
+    transition: color 1000ms ease-in-out;
     transition: background-color .2s ease; }
     .faq-nav .nav-link.active {
       color: var(--black); }
@@ -111,7 +112,9 @@ html[data-theme="light"]{
         color: var(--green);
         text-decoration: none; }
 .tab-content .card-body p {
-  color: var(--grey); }
+  color: var(--grey); 
+	transition: color 1000ms ease-in-out;
+}
   .tab-content .card-body p:last-of-type {
     margin: 0; }
 
@@ -179,4 +182,6 @@ html[data-theme="light"]{
 
 .fire-reward {
   text: var(--white)
+  transition: text 1000ms ease-in-out;
+
 }
