--- a/css/style.scss
+++ b/css/style.scss
@@ -56,6 +56,7 @@
                 padding: 0;
                 border: 0;
                 color: var(--white) ;
+                transition: color 1000ms ease-in-out;
                 text-align: left;
                 white-space: normal;
 				font-size:large;
@@ -65,6 +66,7 @@
                 &:active,
                 &:hover:active {
 					color:var(--green);
+                    transition: color 1000ms ease-in-out;
                     text-decoration: none;
                 }
             }
