--- a/css/custom.css
+++ b/css/custom.css
@@ -196,6 +196,7 @@ body {
 		left: 20px;
 		top:60px;
 		color: var(--white);
+		font-size:small;
 		border: 1px solid var(--white);
 		transition: color 1000ms ease-in-out, border 1000ms ease-in-out;
 	
