--- a/css/bootstrap-4.3.1.css
+++ b/css/bootstrap-4.3.1.css
@@ -2397,10 +2397,10 @@ textarea.form-control {
 @media (max-width: 600px) {
   .btn {
     vertical-align: left;
-    width: 20%;
+    width: 25%;
     margin-right:50%;
     line-height: 1;
-    text-align: center;
+    text-align: left;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
